--- a/css/KZ Portfolio.css
+++ b/css/KZ Portfolio.css
@@ -1,13 +1,13 @@
    @font-face{
        font-family: "font";
        src: url("fonts/AndroidAssassinItalic-eDDp.ttf") format("truetype");
-   }   
+   }
 
    .background > img{
        position: fixed;
        left: 0px;
        top: 0px;
-       width: 95em;
+       width: 100em;
        height: 100em;
    }
 
@@ -113,6 +113,7 @@
       -webkit-transform: rotateZ(3600000deg);
       transform: rotateZ(3600000deg);
       transition: 300000s;
+      position: fixed;
 
    }
    
@@ -135,3 +136,57 @@
        z-index: 1;
        opacity: .85;
    }
+   .k img{
+       position: absolute;
+       top: 10.5em;
+       left: 30em;
+       width: 1em;
+       height: 1em;
+       z-index: 3;
+       -ms-transform: skewX(-30deg);
+       -webkit-transform: skewX(-30deg);
+       transform: skewX(-30deg);
+       transition: 1s;
+   }
+   .z img{
+    position: absolute;
+    top: 10.5em;
+    left: 32em;
+    width: 1em;
+    height: 1em;
+    z-index: 3;
+    -ms-transform: skewX(30deg);
+    -webkit-transform: skewX(30deg);
+    transform: skewX(30deg);
+    transition: 1s;
+}
+  .blackk > img{
+    position: absolute;
+    top: 50em;
+    left: 0px;
+    width: 95em;
+    height: 20em;
+    z-index: 1;
+    opacity: .85;
+}
+  .scroll marquee{
+    height: 100px;
+    overflow: hidden;
+    position: relative;
+    color: white;
+    font-size: 100px; 
+}
+  .scroll marquee p{
+    position: relative;
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    line-height: 50px;
+    text-align: center;
+    -moz-transform: translateX(100%);
+    -webkit-transform: translateX(100%);
+    transform: translateX(100%);
+    -moz-animation: scroll-left 1s linear infinite;
+    -webkit-animation: scroll-left 1s linear infinite;
+    animation: scroll-left 1s linear infinite;
+}
