--- a/css/ResumePage.css
+++ b/css/ResumePage.css
@@ -77,6 +77,12 @@ body{
     margin-right: -50%;
     transform: translate(-50%, -50%);
     text-decoration: none;
+    color: blue;
+    filter: brightness(50%);
+}
+.info > h3 > a:hover{
+    filter: brightness(150%);
+    text-decoration: underline;
 }
 .info2 > h3{
     font-family: sans-serif;
@@ -85,6 +91,15 @@ body{
     left: 49%;
     margin-right: -50%;
     transform: translate(-50%, -50%);
+}
+.info2 h3 a{
+    color: blue;
+    filter: brightness(50%);
+    text-decoration: none;
+}
+.info2 h3 a:hover{
+    filter: brightness(100%);
+    text-decoration: underline;
 }
 
 .info3 h2{
@@ -248,6 +263,10 @@ body{
        color: green;
        width: 10em;
    }
+
+   .drop ul li ul li:hover{
+    filter: brightness(50%);
+}
 
    .flex3{
     order: 1;
