--- a/css/KZ Portfolio.css
+++ b/css/KZ Portfolio.css
@@ -174,7 +174,7 @@
     top: 50em;
     left: 0px;
     width: 95em;
-    height: 20em;
+    height: 50em;
     z-index: 1;
     opacity: .85;
 }
@@ -216,4 +216,56 @@ article img{
     left: 40em;
     z-index: 3;
 }
+article p{
+    position: relative;
+    z-index: 3;
+    top: 21em;
+    left: 12em;
+    color: white;
+    font-family: 'space';
+    width: 50em;
+    text-align: center;
+    font-size: 125%;
+}
+
+article > h3{
+    font-family: sans-serif;
+    position: absolute;
+    top: 48em;
+    left: 49%;
+    margin-right: -50%;
+    transform: translate(-50%, -50%);
+    color: white;
+    z-index: 3;
+    font-size: 175%;
+}
+article h3 a{
+    color: lawngreen;
+    filter: brightness(50%);
+    text-decoration: none;
+}
+article h3 a:hover{
+    filter: brightness(100%);
+    text-decoration: underline;
+}
+
+article > ul{
+    position: absolute;
+    top: 65em;
+    left: -29em;
+    width: 70em;
+    list-style: none;
+    margin: 0px;
+    padding: 0px;
+    display: flex; /*inline, block, inline-block, none*/
+    flex-direction: row;/*column, row-reverse, column reverse*/
+    flex-wrap: wrap;/*no-wrap, wrap-reverse, wrap*/
+    justify-content: space-evenly;/*flex-end, center, space-evenly,space-between, space-around, flex-start*/
+    /*height: 250px;*/
+    align-content: space-evenly;/*flex-end, center, space-between,flex-start, space-evenly, space-around, stretch*/
+    filter: brightness(75%);
+}
+ .flex:hover{
+    filter: brightness(200%);
+} 
 
