--- a/css/projects.css
+++ b/css/projects.css
@@ -139,3 +139,101 @@ ul{
    .flex1 > a:hover{
        color: green;
    }
+
+   .WM > a > img{
+       position: absolute;
+       z-index: 3;
+       width: 30em;
+       height: 25em;
+       top: 30em;
+       left: 7em;
+       border: 8px black solid;
+       box-shadow: 0px 0px 50px white;
+   } 
+
+   .WM a img:hover{
+       border:  8px solid white;
+       filter: brightness(50%);
+   }
+   .WM > h1{
+       position: absolute;
+       z-index: 4;
+       color: lawngreen;
+       left: 5em;
+       top: 12em;
+       text-align: center;
+       font-size: 300%;
+   }
+
+   .TS a img{
+       position: absolute;
+       z-index: 3;
+       width: 30em;
+       height: 25em;
+       top: 30em;
+       left: 53em;
+       border: 8px white solid;
+       box-shadow: 0px 0px 50px white;
+   }
+   .TS a img:hover{
+    border:  8px solid black;
+    filter: brightness(50%);
+}
+   .TS > h1{
+    position: absolute;
+    z-index: 4;
+    color: lawngreen;
+    left: 21em;
+    top: 12em;
+    text-align: center;
+    font-size: 300%;
+}
+
+  .HS a img{
+    position: absolute;
+    z-index: 3;
+    width: 30em;
+    height: 25em;
+    top: 65em;
+    left: 53em;
+    border: 8px black solid;
+    box-shadow: 0px 0px 50px white;
+}
+  .HS a img:hover{
+ border:  8px solid white;
+ filter: brightness(50%);
+}
+  .HS > h1{
+ position: absolute;
+ z-index: 4;
+ color: lawngreen;
+ left: 21em;
+ top: 24em;
+ text-align: center;
+ font-size: 300%;
+}
+
+.HW > a > img{
+    position: absolute;
+    z-index: 3;
+    width: 30em;
+    height: 25em;
+    top: 65em;
+    left: 7em;
+    border: 8px white solid;
+    box-shadow: 0px 0px 50px white;
+} 
+
+.HW a img:hover{
+    border:  8px solid black;
+    filter: brightness(50%);
+}
+.HW > h1{
+    position: absolute;
+    z-index: 4;
+    color: lawngreen;
+    left: 5em;
+    top: 24em;
+    text-align: center;
+    font-size: 300%;
+}
