--- a/css/KZ Portfolio.css
+++ b/css/KZ Portfolio.css
@@ -1,4 +1,5 @@
-   @font-face{
+
+  @font-face{
        font-family: "font";
        src: url("fonts/AndroidAssassinItalic-eDDp.ttf") format("truetype");
    }
@@ -268,4 +269,4 @@ article > ul{
  .flex:hover{
     filter: brightness(200%);
 } 
-
+}
